--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <!-- Android Studio -->
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/portfolio/projekan_android.png" alt="projek_android" width="w-full">
+                        <img src="dist/img/portfolio/projekan_android.png" alt="projekan_android" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Membuat Aplikasi Mobile Android Tema Perpustakaan Menggunakan Android Studio</h3>
                     <p class="font-medium text-base text-secondary text-justify dark:text-slate-400">
